cmake_minimum_required(VERSION 3.5)
project(usb_cam_service)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(OpenCV REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_srvs REQUIRED)

add_executable(image_toggle_service src/image_toggle_service.cpp)
ament_target_dependencies(image_toggle_service rclcpp cv_bridge OpenCV sensor_msgs std_srvs)
install(TARGETS image_toggle_service DESTINATION lib/${PROJECT_NAME})


ament_package()